[FEATURE] add acsi langauge

--- a/src/translations/locales/en.json
+++ b/src/translations/locales/en.json
@@ -78,6 +78,7 @@
   "appointment.label.enrollments": "Enrollments",
   "appointment.label.hoursAgo": "小時前",
   "appointment.label.instructor": "Instructor",
+  "appointment.label.isExisted": "已匯入",
   "appointment.label.member": "學生",
   "appointment.label.orderUpdatedTime": "訂單更新日期",
   "appointment.label.people": "{count} {count, plural, one {person} other {people}}",
@@ -105,7 +106,6 @@
   "appointment.status.enrolled": "Enrolled",
   "appointment.status.excluded": "Closed",
   "appointment.status.finished": "Finished",
-  "appointment.status.notPublished": "Not Published",
   "appointment.text.appointmentDeadline.": "限定用戶於時段開始前多久需完成預約",
   "appointment.text.appointmentResultNotation": "※此紀錄不會公開給學員看到",
   "appointment.text.durationTips": "設定單次預約服務的時間長度",
@@ -179,7 +179,6 @@
   "code.E_USERNAME_EXISTS": "使用者名稱已存在",
   "code.SUCCESS": "成功",
   "common.event.cancelSubscriptionSuccess": "取消訂閱成功",
-  "common.event.failedDownload": "下載失敗",
   "common.event.failedSave": "儲存失敗",
   "common.event.failedUpload": "上傳失敗",
   "common.event.loading": "Loading",
@@ -356,6 +355,7 @@
   "common.label.sessionTitle": "Session Title",
   "common.label.shortDescription": "簡述",
   "common.label.speciality": "專長",
+  "common.label.star": "星等",
   "common.label.startedAt": "開始時間",
   "common.label.status": "狀態",
   "common.label.supportedLanguages": "選擇顯示於哪個語系",
@@ -639,7 +639,6 @@
   "error.route.notFound": "Route Not Found",
   "error.text.deniedRolePermission": "Please login with app owner account.",
   "error.text.forbidden": "Permission denied.",
-  "layout.label.backstage": "管理後台",
   "member.label.assign": "指派",
   "member.label.attachment": "通話附件",
   "member.label.audioRecordFile": "音檔紀錄",
