--- a/src/translations/locales/zh-cn.json
+++ b/src/translations/locales/zh-cn.json
@@ -78,6 +78,7 @@
   "appointment.label.enrollments": "已预约",
   "appointment.label.hoursAgo": "小时前",
   "appointment.label.instructor": "老师",
+  "appointment.label.isExisted": "已匯入",
   "appointment.label.member": "学生",
   "appointment.label.orderUpdatedTime": "订单更新日期",
   "appointment.label.people": "{count} 人",
@@ -105,7 +106,6 @@
   "appointment.status.enrolled": "已预约",
   "appointment.status.excluded": "已关闭",
   "appointment.status.finished": "已结束",
-  "appointment.status.notPublished": "未发布",
   "appointment.text.appointmentDeadline.": "限定用户于索引开始前多久需完成预约",
   "appointment.text.appointmentResultNotation": "※此纪录不会公开给研究员看到",
   "appointment.text.durationTips": "设定单次预约服务的时间长度",
@@ -179,7 +179,6 @@
   "code.E_USERNAME_EXISTS": "使用者名称已存在",
   "code.SUCCESS": "成功",
   "common.event.cancelSubscriptionSuccess": "取消订阅成功",
-  "common.event.failedDownload": "下载失败",
   "common.event.failedSave": "储存失败",
   "common.event.failedUpload": "发布失败",
   "common.event.loading": "载入中",
@@ -356,6 +355,7 @@
   "common.label.sessionTitle": "场次名称",
   "common.label.shortDescription": "简述",
   "common.label.speciality": "专长",
+  "common.label.star": "星等",
   "common.label.startedAt": "开始时间",
   "common.label.status": "状态",
   "common.label.supportedLanguages": "选择显示于该语系",
@@ -639,7 +639,6 @@
   "error.route.notFound": "无此路径",
   "error.text.deniedRolePermission": "此帐号没有权限",
   "error.text.forbidden": "你没有此页面的读取权限",
-  "layout.label.backstage": "管理后台",
   "member.label.assign": "分配",
   "member.label.attachment": "通话附件",
   "member.label.audioRecordFile": "音档纪录",
