[BUGFIX] update terms

--- a/src/translations/locales/acsi.json
+++ b/src/translations/locales/acsi.json
@@ -190,7 +190,7 @@
   "common.event.successfullySaved": "儲存成功",
   "common.event.successfullyUpdatePassword": "已更新密碼",
   "common.event.successfullyUpload": "上傳成功",
-  "common.isContentCreator": "我是創作者",
+  "common.isContentCreator": "我是講師",
   "common.label.account": "帳號",
   "common.label.activityTicket": "實體活動票券",
   "common.label.adminBackstage": "管理後台",
@@ -223,7 +223,7 @@
   "common.label.categoryItem": "分類項目",
   "common.label.confirmPassword": "確認密碼",
   "common.label.consumption": "消費金額",
-  "common.label.contentCreator": "創作者",
+  "common.label.contentCreator": "講師",
   "common.label.countdown": "優惠倒數",
   "common.label.cover": "封面",
   "common.label.createdDate": "建立日期",
@@ -393,12 +393,12 @@
   "common.menu.creatorDisplayAdmin": "講師牆",
   "common.menu.creatorDisplayCategory": "講師領域設定",
   "common.menu.creatorDisplayManagement": "講師牆管理",
-  "common.menu.creatorSettings": "創作者設定",
+  "common.menu.creatorSettings": "講師設定",
   "common.menu.creditAdmin": "時數發放",
   "common.menu.eCommerce": "電子商務",
   "common.menu.exerciseResult": "測驗分數統計",
   "common.menu.memberAdmin": "人員管理",
-  "common.menu.memberCategory": "會員分類",
+  "common.menu.memberCategory": "人員分組",
   "common.menu.memberProperties": "自訂欄位",
   "common.menu.memberSettings": "個人設定",
   "common.menu.members": "人員列表與設定",
@@ -539,7 +539,7 @@
   "common.ui.create": "建立",
   "common.ui.createContract": "建立合約",
   "common.ui.createPlan": "建立方案",
-  "common.ui.creatorStudio": "創作者工作室",
+  "common.ui.creatorStudio": "講師工作室",
   "common.ui.delete": "刪除",
   "common.ui.deletePost": "刪除文章",
   "common.ui.deleteProgram": "刪除課程",
@@ -720,7 +720,7 @@
   "merchandise.label.publishAdmin": "上架設定",
   "merchandise.label.quantity": "數量",
   "merchandise.label.salesAdmin": "販售設定",
-  "merchandise.label.selectContentCreator": "選擇創作者",
+  "merchandise.label.selectContentCreator": "選擇講師",
   "merchandise.label.sendByPost": "郵寄",
   "merchandise.label.setSalePrice": "設定優惠價",
   "merchandise.label.setSellingTime": "限定販售時間",
@@ -840,7 +840,7 @@
   "order.label.paymentLogDetails": "付款方式",
   "order.label.paymentLogNo": "交易編號",
   "order.label.paymentLogPaidAt": "付款時間",
-  "order.label.productOwner": "創作者",
+  "order.label.productOwner": "講師",
   "order.label.productPrice": "項目金額",
   "order.label.productQuantity": "項目數量",
   "order.label.productType": "項目類別",
@@ -938,7 +938,7 @@
   "permission.PROJECT_PRE_ORDER_ADMIN": "預購專案功能",
   "permission.SALES_ADMIN": "所有銷售管理功能",
   "permission.SALES_CALL_ADMIN": "檢視業務專區",
-  "permission.SALES_CREATOR_VIEW": "創作者銷售管理功能",
+  "permission.SALES_CREATOR_VIEW": "講師銷售管理功能",
   "permission.SALES_EXPORT": "匯出所有訂單",
   "permission.SALES_READ": "查看所有訂單",
   "permission.TASK_ADMIN": "所有待辦清單功能",
