[BUGFIX] update terms of coins

--- a/src/translations/locales/acsi.json
+++ b/src/translations/locales/acsi.json
@@ -228,7 +228,7 @@
   "common.label.cover": "封面",
   "common.label.createdDate": "建立日期",
   "common.label.creatorTitle": "稱號",
-  "common.label.currency": "幣值",
+  "common.label.currency": "花費時數",
   "common.label.current": "目前",
   "common.label.currentPassword": "目前密碼",
   "common.label.currentPosition": "目前排序：{position}",
@@ -309,7 +309,7 @@
   "common.label.orderProductType": "項目種類",
   "common.label.orderStatus": "訂單狀態",
   "common.label.originalPrice": "原價",
-  "common.label.ownedCoins": "持有代幣",
+  "common.label.ownedCoins": "剩餘時數",
   "common.label.owner": "建立者",
   "common.label.participants": "人數",
   "common.label.password": "密碼",
@@ -388,7 +388,7 @@
   "common.menu.blogPosts": "媒體文章管理",
   "common.menu.categories": "分類設定",
   "common.menu.coinHistory": "時數發放管理",
-  "common.menu.coinSettings": "代幣設定",
+  "common.menu.coinSettings": "時數發放管理",
   "common.menu.couponPlans": "折價方案",
   "common.menu.creatorDisplayAdmin": "講師牆",
   "common.menu.creatorDisplayCategory": "講師領域設定",
@@ -872,7 +872,7 @@
   "permission.APPOINTMENT_WRITE": "編寫預約方案",
   "permission.APP_SETTING_ADMIN": "所有網站管理功能",
   "permission.BACKSTAGE_ENTER": "可進入後台",
-  "permission.COIN_ADMIN": "所有代幣紀錄功能",
+  "permission.COIN_ADMIN": "所有發送時數紀錄功能",
   "permission.CONTRACT_APPROVED_AT_EDIT": "編輯審核通過日期",
   "permission.CONTRACT_ATTACHMENT_EDIT": "編輯上傳檔案",
   "permission.CONTRACT_CANCELED_AT_EDIT": "編輯取消日期",
@@ -1262,11 +1262,11 @@
   "promotion.label.amount": "數量",
   "promotion.label.availableDateRange": "有效期限",
   "promotion.label.coinAboutToSend": "即將發送",
-  "promotion.label.coinAvailableDate": "代幣效期",
+  "promotion.label.coinAvailableDate": "時數效期",
   "promotion.label.coinConsumptionHistory": "消費紀錄",
   "promotion.label.coinLogTitle": "項目",
   "promotion.label.coinReleaseHistory": "發送紀錄",
-  "promotion.label.coins": "代幣",
+  "promotion.label.coins": "時數",
   "promotion.label.constraint": "消費需達",
   "promotion.label.constraintAmount": "消費滿 {amount} 折抵",
   "promotion.label.coupon": "折價券",
@@ -1284,7 +1284,7 @@
   "promotion.label.exchangeItemsAmount": "兌換項目數量",
   "promotion.label.forever": "無使用期限",
   "promotion.label.fromNow": "即日起",
-  "promotion.label.increaseCoins": "增加代幣",
+  "promotion.label.increaseCoins": "發放時數數量",
   "promotion.label.increasePoints": "增加點數",
   "promotion.label.nameAndEmail": "姓名與 Email",
   "promotion.label.noteForAdmins": "備註(僅供管理員檢視)",
@@ -1303,7 +1303,7 @@
   "promotion.label.scope": "折抵模式",
   "promotion.label.selectMember": "選擇會員",
   "promotion.label.selectProducts": "選擇兌換項目",
-  "promotion.label.sendingCoin": "發送代幣",
+  "promotion.label.sendingCoin": "發放時數",
   "promotion.label.sendingPoint": "發送點數",
   "promotion.label.specificProductScope": "指定項目折抵",
   "promotion.label.title": "項目",
@@ -1339,9 +1339,9 @@
   "promotion.ui.exchange": "兌換",
   "promotion.ui.exportCodes": "匯出代碼",
   "promotion.ui.random": "隨機",
-  "promotion.ui.revokeCoin": "收回代幣",
+  "promotion.ui.revokeCoin": "收回時數",
   "promotion.ui.revokePoint": "收回點數",
-  "promotion.ui.sendCoin": "發送代幣",
+  "promotion.ui.sendCoin": "發放時數",
   "promotion.ui.sendPoint": "發送點數",
   "promotion.ui.useNow": "立即使用",
   "upload.event.failed": "上傳失敗",
