[BUGFIX] fix translation of activity

--- a/src/translations/locales/zh-cn.json
+++ b/src/translations/locales/zh-cn.json
@@ -397,6 +397,7 @@
   "common.menu.creditAdmin": "红利折抵",
   "common.menu.eCommerce": "电子商务",
   "common.menu.exerciseResult": "测验成果",
+  "common.menu.learningOverviewAdmin": "學習總覽",
   "common.menu.memberAdmin": "会员管理",
   "common.menu.memberCategory": "会员分类",
   "common.menu.memberProperties": "自订栏位",
@@ -1084,6 +1085,7 @@
   "program.label.rejectDescription": "退件原因",
   "program.label.rejectModalTitle": "退回案件",
   "program.label.rejected": "审核失败",
+  "program.label.salePrice": "優惠價 (若無請留空)",
   "program.label.score": "分数",
   "program.label.select": "选择课程",
   "program.label.selectDeliveryAt": "选择启用日期",
@@ -1135,6 +1137,7 @@
   "program.text.enrolledPerpetualCount": "已售 {count} 人",
   "program.text.enrolledSubscriptionCount": "目前 {count} 人訂閱中",
   "program.text.exerciseInformation": "评分 {totalPoints} 分，及格 {passingScore} 分",
+  "program.text.groupPlanTitle": " {amount} 人方案",
   "program.text.invalidExercise": "未完成测验",
   "program.text.isPrivatelyPublishedNotation": "您的课程已经私密发布，此课程不会出现在页面上，学生仅能透过连结进入浏览。",
   "program.text.isPubliclyPublishedNotation": "现在你的课程已公开发布，此课程会出现在页面上。",
