--- a/src/translations/locales/en.json
+++ b/src/translations/locales/en.json
@@ -397,6 +397,7 @@
   "common.menu.creditAdmin": "紅利折抵",
   "common.menu.eCommerce": "電子商務",
   "common.menu.exerciseResult": "測驗成果",
+  "common.menu.learningOverviewAdmin": "學習總覽",
   "common.menu.memberAdmin": "會員管理",
   "common.menu.memberCategory": "會員分類",
   "common.menu.memberProperties": "自訂欄位",
@@ -1084,6 +1085,7 @@
   "program.label.rejectDescription": "退件原因",
   "program.label.rejectModalTitle": "退回案件",
   "program.label.rejected": "審核失敗",
+  "program.label.salePrice": "優惠價 (若無請留空)",
   "program.label.score": "分數",
   "program.label.select": "選擇課程",
   "program.label.selectDeliveryAt": "選擇啟用日期",
@@ -1135,6 +1137,7 @@
   "program.text.enrolledPerpetualCount": "Purchased: {count}",
   "program.text.enrolledSubscriptionCount": "Subscribed: {count}",
   "program.text.exerciseInformation": "滿分 {totalPoints} 分，及格 {passingScore} 分",
+  "program.text.groupPlanTitle": " {amount} 人方案",
   "program.text.invalidExercise": "未完成測驗",
   "program.text.isPrivatelyPublishedNotation": "Your course has been published privately. This course will not appear on the page. Students can only access it through the link.",
   "program.text.isPubliclyPublishedNotation": "Now that your class is publicly available, this class will appear on the page.",
