--- a/src/translations/locales/vi.json
+++ b/src/translations/locales/vi.json
@@ -397,6 +397,7 @@
   "common.menu.creditAdmin": "紅利折抵",
   "common.menu.eCommerce": "電子商務",
   "common.menu.exerciseResult": "測驗成果",
+  "common.menu.learningOverviewAdmin": "學習總覽",
   "common.menu.memberAdmin": "會員管理",
   "common.menu.memberCategory": "會員分類",
   "common.menu.memberProperties": "自訂欄位",
@@ -1084,6 +1085,7 @@
   "program.label.rejectDescription": "退件原因",
   "program.label.rejectModalTitle": "退回案件",
   "program.label.rejected": "審核失敗",
+  "program.label.salePrice": "優惠價 (若無請留空)",
   "program.label.score": "分數",
   "program.label.select": "選擇課程",
   "program.label.selectDeliveryAt": "選擇啟用日期",
@@ -1135,6 +1137,7 @@
   "program.text.enrolledPerpetualCount": "Đã bán cho {count} người",
   "program.text.enrolledSubscriptionCount": "Đã đăng ký {count} người",
   "program.text.exerciseInformation": "滿分 {totalPoints} 分，及格 {passingScore} 分",
+  "program.text.groupPlanTitle": " {amount} 人方案",
   "program.text.invalidExercise": "未完成測驗",
   "program.text.isPrivatelyPublishedNotation": "你的課程已經私密發佈，此課程不會出現在頁面上，學生僅能透過連結進入瀏覽。",
   "program.text.isPubliclyPublishedNotation": "現在你的課程已公開發佈，此課程會出現在頁面上。",
