[FEATURE] execute manageTranslations

--- a/src/translations/locales/vi.json
+++ b/src/translations/locales/vi.json
@@ -477,6 +477,8 @@
   "common.status.orderDeleted": "已刪除",
   "common.status.orderExpired": "已失效",
   "common.status.orderFailed": "Thanh toán trả phí",
+  "common.status.orderPartialPaid": "部分付款",
+  "common.status.orderPartialRefund": "部分退款",
   "common.status.orderRefund": "Đã hoàn tiền",
   "common.status.orderSuccess": "Đã hoàn thành",
   "common.status.orderUnpaid": "Đợi thanh toán",
@@ -643,6 +645,7 @@
   "member.label.assign": "指派",
   "member.label.attachment": "通話附件",
   "member.label.audioRecordFile": "音檔紀錄",
+  "member.label.author": "建立者",
   "member.label.basic": "基本資料",
   "member.label.callType": "通話類型",
   "member.label.category": "分類",
@@ -653,6 +656,7 @@
   "member.label.dueDate": "到期日",
   "member.label.duration": "通時",
   "member.label.editNote": "編輯紀錄",
+  "member.label.executor": "執行者",
   "member.label.field": "欄位",
   "member.label.fieldVisible": "欄位顯示",
   "member.label.manager": "承辦人",
@@ -814,6 +818,8 @@
   "merchandise.ui.shippingStoreName": "收件門市",
   "merchandiseInventory.label.currentInventory": "庫存",
   "merchandiseInventory.label.sold": "已售",
+  "order.label.hasPaid": "已支付",
+  "order.label.hasRefunded": "已退款",
   "order.label.invoiceAddress": "發票地址",
   "order.label.invoiceCarrier": "發票載具",
   "order.label.invoiceDonationCode": "發票捐贈碼",
@@ -838,6 +844,7 @@
   "order.label.orderProductCount": "項目總數",
   "order.label.orderProductName": "項目名稱",
   "order.label.orderProductTotalPrice": "項目總額",
+  "order.label.paidPrice": "支付金額",
   "order.label.paymentLogDetails": "付款方式",
   "order.label.paymentLogNo": "交易編號",
   "order.label.paymentLogPaidAt": "付款時間",
@@ -848,6 +855,8 @@
   "order.label.referrer": "推薦人",
   "order.label.sharingCode": "推廣網址",
   "order.label.sharingNote": "推廣備註",
+  "order.text.modifyOrderStatusDescription": "此操作僅更改狀態顯示並控制使用者權限，實際退款或金額異動請到金流平台操作。",
+  "order.ui.modifyOrderStatus": "變更訂單狀態",
   "payment.status.invoiceFailed": "開立失敗 {errorCode}",
   "payment.status.invoicePending": "未開立電子發票",
   "payment.status.invoiceSuccess": "開立成功",
@@ -1314,6 +1323,7 @@
   "promotion.label.unitOfCoins": "點",
   "promotion.label.unitOfPoints": "點",
   "promotion.label.unlimited": "無限期",
+  "promotion.label.voucher": "兌換券",
   "promotion.label.voucherCode": "兌換代碼",
   "promotion.label.voucherCodes": "兌換碼",
   "promotion.label.voucherPlanTitle": "兌換方案名稱",
@@ -1351,5 +1361,11 @@
   "upload.event.success": "Đăng tải thành công",
   "upload.event.uploading": "Đang đăng tải",
   "upload.label.retry": "Đăng tải lại ",
-  "upload.label.uploadFile": "Đăng tải tập tin"
+  "upload.label.uploadFile": "Đăng tải tập tin",
+  "voucher.status.available": "可使用",
+  "voucher.status.expired": "已失效",
+  "voucher.status.redeemable": "可兌換",
+  "voucher.text.fromNow": "即日起",
+  "voucher.text.items": "個項目",
+  "voucher.text.noUsePeriod": "無使用期限"
 }
