--- a/src/translations/locales/zh-cn.json
+++ b/src/translations/locales/zh-cn.json
@@ -477,6 +477,8 @@
   "common.status.orderDeleted": "已删除",
   "common.status.orderExpired": "已失效",
   "common.status.orderFailed": "付款失败",
+  "common.status.orderPartialPaid": "部分付款",
+  "common.status.orderPartialRefund": "部分退款",
   "common.status.orderRefund": "已退",
   "common.status.orderSuccess": "已完成",
   "common.status.orderUnpaid": "待付款",
@@ -643,6 +645,7 @@
   "member.label.assign": "分配",
   "member.label.attachment": "通话附件",
   "member.label.audioRecordFile": "音档纪录",
+  "member.label.author": "建立者",
   "member.label.basic": "基本资料",
   "member.label.callType": "通话类型",
   "member.label.category": "分类",
@@ -653,6 +656,7 @@
   "member.label.dueDate": "到期日",
   "member.label.duration": "通时",
   "member.label.editNote": "编辑纪录",
+  "member.label.executor": "執行者",
   "member.label.field": "栏位",
   "member.label.fieldVisible": "栏位显示",
   "member.label.manager": "承办人",
@@ -814,6 +818,8 @@
   "merchandise.ui.shippingStoreName": "收件门市",
   "merchandiseInventory.label.currentInventory": "库存",
   "merchandiseInventory.label.sold": "已售",
+  "order.label.hasPaid": "已支付",
+  "order.label.hasRefunded": "已退款",
   "order.label.invoiceAddress": "发票地址",
   "order.label.invoiceCarrier": "票载具",
   "order.label.invoiceDonationCode": "门票捐赠码",
@@ -838,6 +844,7 @@
   "order.label.orderProductCount": "项目总数",
   "order.label.orderProductName": "项目名称",
   "order.label.orderProductTotalPrice": "项目预算",
+  "order.label.paidPrice": "支付金額",
   "order.label.paymentLogDetails": "付款方式",
   "order.label.paymentLogNo": "交易编号",
   "order.label.paymentLogPaidAt": "付款时间",
@@ -848,6 +855,8 @@
   "order.label.referrer": "推荐人",
   "order.label.sharingCode": "推广网址",
   "order.label.sharingNote": "推广备注",
+  "order.text.modifyOrderStatusDescription": "此操作僅更改狀態顯示並控制使用者權限，實際退款或金額異動請到金流平台操作。",
+  "order.ui.modifyOrderStatus": "變更訂單狀態",
   "payment.status.invoiceFailed": "开立失败 {errorCode}",
   "payment.status.invoicePending": "未开立电子发票",
   "payment.status.invoiceSuccess": "开立成功",
@@ -1314,6 +1323,7 @@
   "promotion.label.unitOfCoins": "点",
   "promotion.label.unitOfPoints": "点",
   "promotion.label.unlimited": "无限期",
+  "promotion.label.voucher": "兌換券",
   "promotion.label.voucherCode": "兑换代码",
   "promotion.label.voucherCodes": "兑换码",
   "promotion.label.voucherPlanTitle": "兑换方案名称",
@@ -1351,5 +1361,11 @@
   "upload.event.success": "发布成功",
   "upload.event.uploading": "发布中",
   "upload.label.retry": "重新上传",
-  "upload.label.uploadFile": "发布档案"
+  "upload.label.uploadFile": "发布档案",
+  "voucher.status.available": "可使用",
+  "voucher.status.expired": "已失效",
+  "voucher.status.redeemable": "可兌換",
+  "voucher.text.fromNow": "即日起",
+  "voucher.text.items": "個項目",
+  "voucher.text.noUsePeriod": "無使用期限"
 }
