[FEATURE] move locale to hasura

--- a/src/translations/locales/acsi.json
+++ b/src/translations/locales/acsi.json
@@ -1,12 +1,24 @@
 {
   "activity.label.activityIntroduction": "活動介紹",
+  "activity.label.activityLocation": "活動地址",
+  "activity.label.allActivity": "實體 & 線上",
   "activity.label.attended": "簽到",
   "activity.label.description": "備註說明",
+  "activity.label.generateBySystem": "系統產生",
   "activity.label.includingSessions": "包含場次",
   "activity.label.limit": "張數限制",
   "activity.label.location": "地址",
+  "activity.label.offline": "實體",
+  "activity.label.offlineActivity": "實體活動",
+  "activity.label.offlineActivityLocation": "實體活動地址（若非實體活動則留空）",
+  "activity.label.online": "線上",
+  "activity.label.onlineActivity": "線上活動",
+  "activity.label.onlineActivityLocation": "線上直播連結（若非線上直播則留空）",
   "activity.label.publishSettings": "發佈設定",
   "activity.label.published": "是否開賣",
+  "activity.label.selectActivityType": "選擇活動類型",
+  "activity.label.selectSession": "選擇場次",
+  "activity.label.selectSessionAndType": "選擇場次及類型",
   "activity.label.sellingTime": "售票時間",
   "activity.label.session": "場次",
   "activity.label.sessionAdmin": "場次管理",
@@ -33,34 +45,17 @@
   "activity.text.publishedNotation": "現在你的活動已經發佈，此活動會出現在頁面上。",
   "activity.text.unpublishedNotation": "因你的活動未發佈，此活動並不會顯示在頁面上。",
   "activity.ui.addTicketPlan": "加入票券方案",
+  "activity.ui.addTicketSession": "新增場次",
   "activity.ui.createSession": "建立場次",
   "activity.ui.downloadList": "下載名單",
   "activity.ui.participantsList": "參與名單",
   "activity.ui.threshold": "最少",
-  "activity.warning.selectSession": "選擇場次",
-  "app.label.description": "網站敘述",
-  "app.label.fbPixelId": "Facebook Pixel ID",
-  "app.label.gaId": "Google Analytics ID",
-  "app.label.gtmId": "Google Tag Manager ID",
+  "admin.app_owner.redirect": "管理後台首頁轉址",
+  "admin_repo.branch": "後台版本分支",
   "app.label.name": "網站名稱",
-  "app.label.ogDescription": "Open Graph 網站敘述",
-  "app.label.ogImage": "Open Graph 網站圖片",
-  "app.label.ogTitle": "Open Graph 網站標題",
-  "app.label.ogUrl": "Open Graph 網址",
-  "app.label.paymentDueDays": "付款截止天數",
-  "app.label.seoName": "SEO 網站名稱",
-  "app.label.seoUrl": "SEO 網址",
-  "app.label.tappayAppId": "Tappay ID",
-  "app.label.tappayAppKey": "Tappay 金鑰",
-  "app.label.themeBtnDangerBackground": "主題色：警示按鈕背景",
-  "app.label.themeBtnDangerBorder": "主題色：警示按鈕邊框",
-  "app.label.themeBtnPrimaryBackground": "主題色：按鈕背景",
-  "app.label.themeBtnPrimaryColor": "主題色：按鈕主色",
-  "app.label.themeLayoutBodyBackground": "主題色：背景色",
-  "app.label.themeLayoutHeaderBackground": "主題色：Header背景色",
-  "app.label.themePrimaryColor": "主題色：主色",
-  "app.label.title": "網站標題",
   "app.label.vimeoProjectId": "Vimeo ID",
+  "app_repo.branch": "前台版本分支",
+  "app_repo.name": "前台 Repo",
   "appointment.event.appointmentFailed": "預約失敗",
   "appointment.event.appointmentSuccessfully": "預約成功",
   "appointment.label.allInstructors": "全部老師",
@@ -144,6 +139,14 @@
   "appointment.ui.open": "開啟",
   "appointment.ui.single": "單一",
   "appointment.warning.repetitiveMeta": "※重複週期為",
+  "auth.commonhealth.client_id": "康健 Client ID",
+  "auth.commonhealth.endpoint": "康健 Oauth2 網址",
+  "auth.facebook_app_id": "Facebook App ID",
+  "auth.google_client_id": "Google client ID",
+  "auth.line_client_id": "Line Client ID",
+  "auth.line_client_secret": "Line Client Secret",
+  "auth.parenting.endpoint": "親子天下 Oauth2 網址",
+  "auth.parenting_client_id": "親子天下 Client ID",
   "blog.label.codeName": "網址代稱",
   "blog.label.deletePost": "刪除文章",
   "blog.label.merchandises": "相關商品",
@@ -163,6 +166,10 @@
   "blog.ui.description": "圖文內容",
   "blog.ui.postSetting": "文章設定",
   "blog.ui.video": "影片內容",
+  "call_server.origin": "話機系統網址",
+  "chailease.api_key": "仲信 API Key",
+  "chakraTheme.colors.primary.500": "主題色(500)",
+  "chakraTheme.colors.primary.600": "主題色(600)",
   "checkout.coupon.form.placeholder.enter": "輸入折扣碼",
   "checkout.coupon.fromNow": "即日起",
   "checkout.discount.directly": "直接折抵",
@@ -178,6 +185,9 @@
   "code.E_SEND_EMAIL": "寄送信件失敗",
   "code.E_USERNAME_EXISTS": "使用者名稱已存在",
   "code.SUCCESS": "成功",
+  "coin.exchange_rate": "代幣匯率",
+  "coin.name": "代幣名稱",
+  "coin.unit": "代幣單位",
   "common.event.cancelSubscriptionSuccess": "取消訂閱成功",
   "common.event.failedSave": "儲存失敗",
   "common.event.failedUpload": "上傳失敗",
@@ -380,6 +390,8 @@
   "common.menu.activityAdmin": "實體活動",
   "common.menu.activityCategory": "實體活動分類",
   "common.menu.appAdmin": "網站管理",
+  "common.menu.appBasicAdmin": "基本設定",
+  "common.menu.appSettingAdmin": "參數設定",
   "common.menu.appointmentAdmin": "預約服務",
   "common.menu.appointmentPlans": "預約方案",
   "common.menu.appointments": "預約紀錄",
@@ -403,6 +415,7 @@
   "common.menu.memberProperties": "自訂欄位",
   "common.menu.memberSettings": "個人設定",
   "common.menu.members": "人員列表與設定",
+  "common.menu.menuSetup": "選單設定",
   "common.menu.merchandise": "商品",
   "common.menu.merchandiseCategory": "商品分類",
   "common.menu.merchandiseInventory": "庫存管理",
@@ -411,6 +424,8 @@
   "common.menu.merchandises": "商品管理",
   "common.menu.noteAdmin": "聯絡管理",
   "common.menu.ownerSettings": "管理員設定",
+  "common.menu.pageAdmin": "頁面管理",
+  "common.menu.pageSetup": "頁面設定",
   "common.menu.podcastAdmin": "音頻廣播",
   "common.menu.podcastCategory": "廣播分類",
   "common.menu.podcastPlans": "訂閱方案",
@@ -615,6 +630,115 @@
   "contract.status.revoked": "已解約",
   "contract.text.deleteContractWarning": "你確定要解除合約？此操作無法復原，請審慎評估！",
   "contract.ui.revokeContract": "解除合約",
+  "craft.label.activity": "活動",
+  "craft.label.activityBlock": "活動區塊",
+  "craft.label.activitySection": "活動區塊",
+  "craft.label.allTemplate": "所有樣板",
+  "craft.label.avatar": "頭像設定",
+  "craft.label.background": "背景",
+  "craft.label.backgroundColor": "底色",
+  "craft.label.blockSetting": "區塊樣式",
+  "craft.label.bold": "粗",
+  "craft.label.borderSpacing": "邊框間距",
+  "craft.label.boundary": "邊界",
+  "craft.label.buttonBlock": "滿版",
+  "craft.label.buttonSetting": "按鈕設定",
+  "craft.label.buttonStyle": "按鈕樣式",
+  "craft.label.callToAction": "行動呼籲",
+  "craft.label.cardStyle": "卡片樣式",
+  "craft.label.carouselSetting": "輪播設定",
+  "craft.label.center": "中",
+  "craft.label.choiceData": "選擇資料",
+  "craft.label.choiceTemplate": "選擇版型",
+  "craft.label.color": "顏色",
+  "craft.label.coloring": "填色",
+  "craft.label.columnAmount": "欄數",
+  "craft.label.commonProblem": "常見問題",
+  "craft.label.containerComponent": "區塊元件",
+  "craft.label.content": "內文",
+  "craft.label.cover": "輪播",
+  "craft.label.dataDisplay": "資料顯示",
+  "craft.label.description": "描述",
+  "craft.label.desktopDisplay": "電腦版顯示",
+  "craft.label.desktopLayoutComponent": "電腦版排版元件",
+  "craft.label.displayAmount": "資料顯示數量",
+  "craft.label.editPage": "編輯頁面",
+  "craft.label.emptyPage": "空白頁",
+  "craft.label.feature": "特色",
+  "craft.label.fontSize": "字級",
+  "craft.label.fontWeight": "字重",
+  "craft.label.fundraising": "募資",
+  "craft.label.fundraisingBlock": "講師區塊",
+  "craft.label.imageBlock": "圖片區塊",
+  "craft.label.imageSetting": "圖片設定",
+  "craft.label.imageStyle": "圖片樣式",
+  "craft.label.large": "大",
+  "craft.label.latestUpdatedAt": "最後修改時間",
+  "craft.label.lecturer": "講師",
+  "craft.label.lecturerBlock": "講師區塊",
+  "craft.label.left": "左",
+  "craft.label.lighter": "細",
+  "craft.label.lineHeight": "行高",
+  "craft.label.link": "連結",
+  "craft.label.margin": "外距",
+  "craft.label.middle": "中",
+  "craft.label.mobileDisplay": "手機版顯示",
+  "craft.label.mobileLayoutComponent": "手機版排版元件",
+  "craft.label.none": "無樣式",
+  "craft.label.normal": "中",
+  "craft.label.openNewTab": "另開分頁",
+  "craft.label.outline": "線框",
+  "craft.label.padding": "內距",
+  "craft.label.pageEditor": "首頁 - 編輯頁面",
+  "craft.label.pageName": "頁面名稱",
+  "craft.label.paragraphContent": "段落內容",
+  "craft.label.paragraphStyle": "段落樣式",
+  "craft.label.partner": "合作夥伴",
+  "craft.label.plainText": "純文字",
+  "craft.label.podcast": "廣播",
+  "craft.label.podcastBlock": "廣播區塊",
+  "craft.label.preOrder": "預購",
+  "craft.label.preOrderBlock": "預購專區",
+  "craft.label.program": "課程",
+  "craft.label.programBlock": "課程區塊",
+  "craft.label.programSection": "課程區塊",
+  "craft.label.publish": "發佈",
+  "craft.label.ratio": "比例",
+  "craft.label.referrerEvaluation": "推薦評價",
+  "craft.label.right": "右",
+  "craft.label.settings": "基本設定",
+  "craft.label.size": "尺寸",
+  "craft.label.small": "小",
+  "craft.label.specifyDisplayItem": "指定顯示項目",
+  "craft.label.statisticsBlock": "統計數字",
+  "craft.label.textAlign": "對齊",
+  "craft.label.textBlock": "文字區塊",
+  "craft.label.title": "標題",
+  "craft.label.titleContent": "標題內容",
+  "craft.label.titleStyle": "標題樣式",
+  "craft.label.url": "網址",
+  "craft.label.urlPath": "網址路徑",
+  "craft.label.variant": "變化",
+  "craft.label.width": "寬度",
+  "craft.text.deletePageConfirmation": "頁面一經刪除即不可恢復，確定要刪除嗎？",
+  "craft.text.deletePageWarning": "請仔細確認是否真的要刪除頁面，因為一旦刪除就無法恢復。",
+  "craft.text.deleteWarning": "刪除不可恢復，確定要刪除嗎？",
+  "craft.text.noPageName": "尚未填寫頁面名稱",
+  "craft.text.noPath": "尚未填寫網址路徑",
+  "craft.text.notCompleteNotation": "請填寫以下必填資料，填寫完畢即可由此發佈",
+  "craft.text.publishedNotation": "現在你的頁面已經發佈，此頁面將會顯示。",
+  "craft.text.unpublishedNotation": "因你的頁面未發佈，此頁面並不會顯示。",
+  "craft.ui.createPage": "建立頁面",
+  "craft.ui.deleteAllBlock": "移除整個區塊",
+  "craft.ui.deleteBlock": "移除區塊",
+  "craft.ui.deletePage": "刪除頁面",
+  "craft.ui.empty": "無",
+  "craft.ui.image": "圖片",
+  "craft.ui.solidColor": "純色",
+  "currency_id": "預設貨幣",
+  "custom.project.plan_price_style": "客製方案價錢樣式",
+  "customer_support_link": "客服連結",
+  "description": "網站描述",
   "error.data.failedDownload": "下載失敗",
   "error.data.fetch": "讀取錯誤",
   "error.event.checkSameCodeName": "網址代碼已被使用",
@@ -642,6 +766,57 @@
   "error.route.notFound": "無此路徑",
   "error.text.deniedRolePermission": "此帳號沒有權限",
   "error.text.forbidden": "你沒有此頁面的讀取權限",
+  "error.text.memberAlreadyExist": "會員已存在",
+  "extension.api": "Extension API",
+  "favicon": "網站標誌",
+  "feature.chailease_lookup": "啟用仲信查詢",
+  "feature.modify_order_status": "啟用訂單修改",
+  "feature.swarmify.enabled": "啟用 Swarmify",
+  "footer.type": "頁尾類別",
+  "home.redirect": "首頁轉址",
+  "homepage_cover_slides": "首頁投影片",
+  "line.account_link.is_already_linked_message": "line.account_link.is_already_linked_message",
+  "line.account_link.message": "line.account_link.message",
+  "line.account_link.successfully_message": "line.account_link.successfully_message",
+  "line.account_link.trigger_message": "line.account_link.trigger_message",
+  "line.auto_reply.excluded_trigger_message": "line.auto_reply.excluded_trigger_message",
+  "line.auto_reply.excluded_trigger_message.enable": "line.auto_reply.excluded_trigger_message.enable",
+  "line.auto_reply.message": "line.auto_reply.message",
+  "line.carousel_template.empty_program": "line.carousel_template.empty_program",
+  "line.carousel_template.program": "line.carousel_template.program",
+  "line.carousel_template.program.content": "line.carousel_template.program.content",
+  "line.carousel_template.program.content_limit": "line.carousel_template.program.content_limit",
+  "line.carousel_template.program.trigger_message": "line.carousel_template.program.trigger_message",
+  "line.carousel_template.program.trigger_message_unbind": "line.carousel_template.program.trigger_message_unbind",
+  "line.channel_id": "line.channel_id",
+  "line.rich_menu.account_linked_id": "line.rich_menu.account_linked_id",
+  "line.rich_menu.action.already_linked_block_a": "line.rich_menu.action.already_linked_block_a",
+  "line.rich_menu.action.already_linked_block_b": "line.rich_menu.action.already_linked_block_b",
+  "line.rich_menu.action.already_linked_block_c": "line.rich_menu.action.already_linked_block_c",
+  "line.rich_menu.action.already_linked_block_d": "line.rich_menu.action.already_linked_block_d",
+  "line.rich_menu.action.already_linked_block_e": "line.rich_menu.action.already_linked_block_e",
+  "line.rich_menu.action.already_linked_block_f": "line.rich_menu.action.already_linked_block_f",
+  "line.rich_menu.action.block_a": "line.rich_menu.action.block_a",
+  "line.rich_menu.action.block_b": "line.rich_menu.action.block_b",
+  "line.rich_menu.action.block_c": "line.rich_menu.action.block_c",
+  "line.rich_menu.action.block_d": "line.rich_menu.action.block_d",
+  "line.rich_menu.action.block_e": "line.rich_menu.action.block_e",
+  "line.rich_menu.action.block_f": "line.rich_menu.action.block_f",
+  "line.rich_menu.default_id": "line.rich_menu.default_id",
+  "line.rich_menu.param.already_linked_block_a": "line.rich_menu.param.already_linked_block_a",
+  "line.rich_menu.param.already_linked_block_b": "line.rich_menu.param.already_linked_block_b",
+  "line.rich_menu.param.already_linked_block_c": "line.rich_menu.param.already_linked_block_c",
+  "line.rich_menu.param.already_linked_block_d": "line.rich_menu.param.already_linked_block_d",
+  "line.rich_menu.param.already_linked_block_e": "line.rich_menu.param.already_linked_block_e",
+  "line.rich_menu.param.already_linked_block_f": "line.rich_menu.param.already_linked_block_f",
+  "line.rich_menu.param.block_a": "line.rich_menu.param.block_a",
+  "line.rich_menu.param.block_b": "line.rich_menu.param.block_b",
+  "line.rich_menu.param.block_c": "line.rich_menu.param.block_c",
+  "line.rich_menu.param.block_d": "line.rich_menu.param.block_d",
+  "line.rich_menu.param.block_e": "line.rich_menu.param.block_e",
+  "line.rich_menu.param_block_f": "line.rich_menu.param_block_f",
+  "locale.languages": "locale.languages",
+  "logo": "logo",
   "member.label.assign": "指派",
   "member.label.attachment": "通話附件",
   "member.label.audioRecordFile": "音檔紀錄",
@@ -686,6 +861,9 @@
   "member.ui.memberReject": "學員拒絕",
   "member.ui.switchCalendar": "切換月曆模式",
   "member.ui.switchTable": "切換列表模式",
+  "memberMessages.label.createMember": "添加會員",
+  "memberMessages.label.roleSettings": "添加身份",
+  "memberMessages.label.username": "使用者名稱",
   "merchandise.label.abstract": "商品摘要",
   "merchandise.label.allMerchandiseType": "所有商品類型",
   "merchandise.label.basicSettings": "基本設定",
@@ -818,6 +996,13 @@
   "merchandise.ui.shippingStoreName": "收件門市",
   "merchandiseInventory.label.currentInventory": "庫存",
   "merchandiseInventory.label.sold": "已售",
+  "name": "name",
+  "open_graph.description": "open_graph.description",
+  "open_graph.image": "open_graph.image",
+  "open_graph.title": "open_graph.title",
+  "open_graph.url": "open_graph.url",
+  "order.commonhealth.client_id": "order.commonhealth.client_id",
+  "order.commonhealth.endpoint": "order.commonhealth.endpoint",
   "order.label.hasPaid": "已支付",
   "order.label.hasRefunded": "已退款",
   "order.label.invoiceAddress": "發票地址",
@@ -855,11 +1040,33 @@
   "order.label.referrer": "推薦人",
   "order.label.sharingCode": "推廣網址",
   "order.label.sharingNote": "推廣備註",
+  "order.parenting.client_id": "order.parenting.client_id",
+  "order.parenting.enable": "order.parenting.enable",
+  "order.parenting.endpoint": "order.parenting.endpoint",
+  "order.parenting.id_regex": "order.parenting.id_regex",
   "order.text.modifyOrderStatusDescription": "此操作僅更改狀態顯示並控制使用者權限，實際退款或金額異動請到金流平台操作。",
   "order.ui.modifyOrderStatus": "變更訂單狀態",
+  "payment.commonhealth.client_account": "payment.commonhealth.client_account",
+  "payment.commonhealth.endpoint": "payment.commonhealth.endpoint",
+  "payment.gateway.default": "payment.gateway.default",
+  "payment.gateway.default_method": "payment.gateway.default_method",
+  "payment.matching_due_days": "payment.matching_due_days",
+  "payment.parenting.client_account": "payment.parenting.client_account",
+  "payment.parenting.credit.enable": "payment.parenting.credit.enable",
+  "payment.parenting.endpoint": "payment.parenting.endpoint",
+  "payment.paypal.credit.enable": "payment.paypal.credit.enable",
+  "payment.spgateway.barcode.enable": "payment.spgateway.barcode.enable",
+  "payment.spgateway.credit.enable": "payment.spgateway.credit.enable",
+  "payment.spgateway.cvs.enable": "payment.spgateway.cvs.enable",
+  "payment.spgateway.instflag.enable": "payment.spgateway.instflag.enable",
+  "payment.spgateway.instflag.staging": "payment.spgateway.instflag.staging",
+  "payment.spgateway.unionpay.enable": "payment.spgateway.unionpay.enable",
+  "payment.spgateway.vacc.enable": "payment.spgateway.vacc.enable",
+  "payment.spgateway.webatm.enable": "payment.spgateway.webatm.enable",
   "payment.status.invoiceFailed": "開立失敗 {errorCode}",
   "payment.status.invoicePending": "未開立電子發票",
   "payment.status.invoiceSuccess": "開立成功",
+  "payment_gateway.groupBuying": "payment_gateway.groupBuying",
   "permission.ACTIVITY_ADMIN": "所有線下實體功能",
   "permission.ACTIVITY_CATEGORY_ADMIN": "所有線下實體分類功能",
   "permission.ACTIVITY_CATEGORY_DELETE": "刪除活動分類",
@@ -902,6 +1109,7 @@
   "permission.MEMBER_CATEGORY_ADMIN": "所有會員分類功能",
   "permission.MEMBER_CONTRACT_INSERT": "建立合約功能",
   "permission.MEMBER_CONTRACT_REVOKE": "解除合約功能",
+  "permission.MEMBER_CREATE": "添加會員",
   "permission.MEMBER_EMAIL_EDIT": "編輯信箱",
   "permission.MEMBER_MANAGER_ADMIN": "指派承辦人功能",
   "permission.MEMBER_PHONE_ADMIN": "檢視電話欄位",
@@ -1235,6 +1443,10 @@
   "programPackage.ui.subscription": "訂閱",
   "programPackage.ui.unpublish": "停售，此方案暫停對外銷售，並從課程組合中隱藏",
   "programPackage.ui.visible": "顯示",
+  "program_collection_banner.enabled": "program_collection_banner.enabled",
+  "program_collection_banner.img_url@0": "program_collection_banner.img_url@0",
+  "program_collection_banner.img_url@425": "program_collection_banner.img_url@425",
+  "program_collection_banner.link": "program_collection_banner.link",
   "project.label.expireAt": "截止日",
   "project.label.fundingTerm": "募資條件",
   "project.label.isParticipantsVisible": "購買人數",
@@ -1357,6 +1569,51 @@
   "promotion.ui.sendCoin": "發放時數",
   "promotion.ui.sendPoint": "發送點數",
   "promotion.ui.useNow": "立即使用",
+  "seo.host": "seo.host",
+  "seo.logo": "seo.logo",
+  "seo.meta": "seo.meta",
+  "seo.name": "seo.name",
+  "seo.url": "seo.url",
+  "swarmify.cdn_key": "swarmify.cdn_key",
+  "tappay.app_id": "tappay.app_id",
+  "tappay.app_key": "tappay.app_key",
+  "tappay.dry_run": "tappay.dry_run",
+  "theme.@black": "theme.@black",
+  "theme.@btn-border-radius-base": "theme.@btn-border-radius-base",
+  "theme.@btn-danger-bg": "theme.@btn-danger-bg",
+  "theme.@btn-danger-border": "theme.@btn-danger-border",
+  "theme.@btn-danger-color": "theme.@btn-danger-color",
+  "theme.@btn-default-color": "theme.@btn-default-color",
+  "theme.@btn-font-size-lg": "theme.@btn-font-size-lg",
+  "theme.@btn-font-size-sm": "theme.@btn-font-size-sm",
+  "theme.@btn-primary-bg": "theme.@btn-primary-bg",
+  "theme.@btn-primary-border": "theme.@btn-primary-border",
+  "theme.@btn-primary-color": "theme.@btn-primary-color",
+  "theme.@error-color": "theme.@error-color",
+  "theme.@font-size-base": "theme.@font-size-base",
+  "theme.@font-size-lg": "theme.@font-size-lg",
+  "theme.@font-size-sm": "theme.@font-size-sm",
+  "theme.@heading-1-size": "theme.@heading-1-size",
+  "theme.@heading-2-size": "theme.@heading-2-size",
+  "theme.@heading-3-size": "theme.@heading-3-size",
+  "theme.@heading-4-size": "theme.@heading-4-size",
+  "theme.@heading-5-size": "theme.@heading-5-size",
+  "theme.@heading-color": "theme.@heading-color",
+  "theme.@layout-body-background": "theme.@layout-body-background",
+  "theme.@normal-color": "theme.@normal-color",
+  "theme.@primary-color": "theme.@primary-color",
+  "theme.@processing-color": "theme.@processing-color",
+  "theme.@success-color": "theme.@success-color",
+  "theme.@text-color": "theme.@text-color",
+  "theme.@text-color-secondary": "theme.@text-color-secondary",
+  "theme.@warning-color": "theme.@warning-color",
+  "theme.@white": "theme.@white",
+  "title": "title",
+  "tracking.fb_pixel_id": "tracking.fb_pixel_id",
+  "tracking.ga_id": "tracking.ga_id",
+  "tracking.gtm_id": "tracking.gtm_id",
+  "tracking.hotjar_id": "tracking.hotjar_id",
+  "tracking.hotjar_sv": "tracking.hotjar_sv",
   "upload.event.failed": "上傳失敗",
   "upload.event.success": "上傳成功",
   "upload.event.uploading": "上傳中",
