--- a/src/translations/locales/zh.json
+++ b/src/translations/locales/zh.json
@@ -1155,6 +1155,10 @@
   "permission.PROJECT_ON_SALE_ADMIN": "促銷專案功能",
   "permission.PROJECT_PRE_ORDER_ADMIN": "預購專案功能",
   "permission.SALES_ADMIN": "所有銷售管理功能",
+  "permission.SALES_RECORDS_ADMIN": "查看所有銷售紀錄",
+  "permission.SALES_RECORDS_CREATOR": "查看創作者銷售紀錄",
+  "permission.GROSS_SALES_ADMIN": "查看所有銷售總額",
+  "permission.GROSS_SALES_CREATOR": "查看創作者銷售總額",
   "permission.SALES_CALL_ADMIN": "檢視業務專區",
   "permission.SALES_CREATOR_VIEW": "創作者銷售管理功能",
   "permission.SALES_EXPORT": "匯出所有訂單",
