--- a/TODO
+++ b/TODO
@@ -2,3 +2,4 @@
 2. member/project/podcastProgram collection
 3. template do not use JSON to generate
 4. combine CraftSettings and CraftSettingsBlock: useNode() always cannot be detected in editor
+5. remove component in admin/index
