--- a/TODO
+++ b/TODO
@@ -1,5 +1,9 @@
 1. move sourceOptions type out of craft
 2. member/project/podcastProgram collection
 3. template do not use JSON to generate
-4. combine CraftSettings and CraftSettingsBlock: useNode() always cannot be detected in editor
 5. remove component in admin/index
+6. image settings
+7. button settings align
+8. drag / duplicate / save / delete
+9. serialize 
+10. template refetch
