[FEATURE] fix @ant-design/charts version & rename noun of activity

--- a/src/translations/locales/vi.json
+++ b/src/translations/locales/vi.json
@@ -388,7 +388,7 @@
   "common.label.yourNotification": "Thông báo của bạn",
   "common.menu.activities": "Quản lý sự kiện offline",
   "common.menu.activityAdmin": "Sự kiện offline",
-  "common.menu.activityCategory": "線下實體分類",
+  "common.menu.activityCategory": "活動分類",
   "common.menu.appAdmin": "網站管理",
   "common.menu.appBasicAdmin": "基本設定",
   "common.menu.appSettingAdmin": "參數設定",
@@ -454,7 +454,7 @@
   "common.menu.voucherPlans": "Kế hoạch voucher",
   "common.period.no": "無使用期限",
   "common.product.activityTicket": "Vé sự kiện",
-  "common.product.allActivityTicket": "全部線下實體",
+  "common.product.allActivityTicket": "全部活動",
   "common.product.allAppointmentPlan": "全部預約",
   "common.product.allItem": "全部項目",
   "common.product.allMerchandise": "全部商品",
@@ -1067,8 +1067,8 @@
   "payment.status.invoicePending": "未開立電子發票",
   "payment.status.invoiceSuccess": "開立成功",
   "payment_gateway.groupBuying": "payment_gateway.groupBuying",
-  "permission.ACTIVITY_ADMIN": "所有線下實體功能",
-  "permission.ACTIVITY_CATEGORY_ADMIN": "所有線下實體分類功能",
+  "permission.ACTIVITY_ADMIN": "所有活動功能",
+  "permission.ACTIVITY_CATEGORY_ADMIN": "所有活動分類功能",
   "permission.ACTIVITY_CATEGORY_DELETE": "刪除活動分類",
   "permission.ACTIVITY_CATEGORY_READ": "查看活動分類",
   "permission.ACTIVITY_CATEGORY_WRITE": "編寫活動分類",
@@ -1166,7 +1166,7 @@
   "permission.VOUCHER_PLAN_ADMIN": "所有兌換方案功能",
   "permission.VOUCHER_PLAN_READ": "查看兌換方案",
   "permission.VOUCHER_PLAN_WRITE": "編寫兌換方案",
-  "permission.label.activity": "線下實體",
+  "permission.label.activity": "活動",
   "permission.label.all": "所有權限",
   "permission.label.appAdmin": "網站管理",
   "permission.label.appointment": "預約服務",
